--- a/App.Web/App.Web.csproj
+++ b/App.Web/App.Web.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6423E631-6A1E-4FDD-81DD-5B36DB280504}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{9A62194D-53F8-453F-956D-700FA01A6BEC}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CustomMVC</RootNamespace>
-    <AssemblyName>CustomMVC</AssemblyName>
+    <RootNamespace>App.Web</RootNamespace>
+    <AssemblyName>App.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,29 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\Methods\HttpGetAttribute.cs" />
-    <Compile Include="Attributes\Methods\HttpMethodAttribute.cs" />
-    <Compile Include="Attributes\Methods\HttpPostAttribute.cs" />
-    <Compile Include="Controllers\Controller.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Interfaces\Generic\IActionResult.cs" />
-    <Compile Include="Interfaces\Generic\IRenderable.cs" />
-    <Compile Include="Interfaces\IActionResult.cs" />
-    <Compile Include="Interfaces\IInvocable.cs" />
-    <Compile Include="Interfaces\IRedirect.cs" />
-    <Compile Include="Interfaces\IRenderable.cs" />
-    <Compile Include="MvcContext.cs" />
-    <Compile Include="MvcEngine.cs" />
+    <Compile Include="AppStart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Routers\ControllerRouter.cs" />
-    <Compile Include="ViewEngine\ActionResult.cs" />
-    <Compile Include="ViewEngine\Generic\ActionResult.cs" />
+    <Compile Include="RouteTable.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CustomHttpServer\CustomHttpServer\CustomHttpServer.csproj">
       <Project>{a75b0aec-490b-4d47-80fe-fd478685e09b}</Project>
       <Name>CustomHttpServer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CustomMVC\CustomMVC.csproj">
+      <Project>{6423e631-6a1e-4fdd-81dd-5b36db280504}</Project>
+      <Name>CustomMVC</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
